Moved the Free Pascal release number to the front of the package version.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21295 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/freepascal/Makefile
+++ b/toolchain/freepascal/Makefile
@@ -54,7 +54,7 @@ endif
 
 OSNAME		?= unknown
 PKGNAME		:= fpc-$(TOOLCHAIN_NAME)
-PKGVER		:= $(shell date +%Y.%j)-$(FPC_VERSION)
+PKGVER		:= $(FPC_VERSION)-$(shell date +%Y.%j)
 PKGARCH		:= $(shell dpkg --print-architecture)
 PKGSUFFIX	:= $(PKGVER)-$(OSNAME)-$(PKGARCH)
 PKGDIR		:= $(PKGNAME)-$(PKGSUFFIX)
