Prepend GCC version number to package version
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21297 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libaws/Makefile
+++ b/toolchain/libaws/Makefile
@@ -31,9 +31,10 @@ LIBDIR		:= $(GCCSYSROOT)/usr/lib
 GPRDIR		:= $(PKGDIR)$(GCCSYSROOT)/../../share/gpr
 
 BUILDNUM	?= 1
+GCCVER		:= $(shell $(CROSS_COMPILE)gcc --version | awk '/muntsos/ { print $$3 }')
 OSNAME		?= unknown
 PKGNAME		:= $(INSTALLDIR)-libaws
-PKGVER		:= $(shell date +%Y.%j).$(BUILDNUM)
+PKGVER		:= $(GCCVER)-$(shell date +%Y.%j).$(BUILDNUM)
 PKGARCH		:= all
 PKGDIR		:= $(PKGNAME)-$(PKGVER)-$(OSNAME)-$(PKGARCH)
 PKGFILE		:= $(PKGDIR).deb
