Changed the default value for LIBSIMPLEIO to /usr/local/share/libsimpleio
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21303 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/common/Makefile
+++ b/toolchain/common/Makefile
@@ -20,7 +20,7 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-LIBSIMPLEIO	?= $(HOME)/libsimpleio
+LIBSIMPLEIO	?= /usr/local/share/libsimpleio
 MUNTSOS		?= ../..
 
 BUILDNUM	?= 1
