Use relative path for libsimpleio/
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21304 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libsimpleio/Makefile
+++ b/toolchain/libsimpleio/Makefile
@@ -24,7 +24,7 @@ undefine AR
 undefine CC
 undefine RANLIB
 
-LIBSIMPLEIO	?= /usr/local/share/libsimpleio
+LIBSIMPLEIO	?= ../../../libsimpleio
 MUNTSOS		?= ../..
 
 include $(MUNTSOS)/include/$(BOARDNAME).mk
