Added defconfig target.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21319 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -53,6 +53,22 @@ $(KERNEL_WORK)/config.done: $(KERNEL_WORK)/src.done
 	cp $(KERNEL_SRC)/.config $(KERNEL_CONFIG)
 	touch $@
 
+defconfig: $(KERNEL_WORK)/src.done
+ifeq ($(BOARDBASE), BeagleBone)
+	$(MAKE) -C $(KERNEL_SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) omap2plus_defconfig
+endif
+ifeq ($(BOARDBASE), RaspberryPi1)
+	$(MAKE) -C $(KERNEL_SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) KERNEL=kernel  bcmrpi_defconfig
+endif
+ifeq ($(BOARDBASE), RaspberryPi2)
+	$(MAKE) -C $(KERNEL_SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) KERNEL=kernel7 bcm2709_defconfig
+endif
+ifeq ($(BOARDBASE), RaspberryPi3)
+	$(MAKE) -C $(KERNEL_SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) KERNEL=kernel8 bcm2711_defconfig
+endif
+	cp $(KERNEL_SRC)/.config $(KERNEL_CONFIG)
+	touch $@
+
 menuconfig: $(KERNEL_WORK)/src.done
 	cp $(KERNEL_CONFIG) $(KERNEL_SRC)/.config
 	$(MAKE) -C $(KERNEL_SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) menuconfig
