Started working on support for the LePotato.
https://libre.computer/products/aml-s905x-cc


git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21323 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -59,6 +59,9 @@ defconfig: $(KERNEL_WORK)/src.done
 ifeq ($(BOARDBASE), BeagleBone)
 	$(MAKE) -C $(KERNEL_SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) omap2plus_defconfig
 endif
+ifeq ($(BOARDBASE), LePotato)
+	$(MAKE) -C $(KERNEL_SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) defconfig
+endif
 ifeq ($(BOARDBASE), RaspberryPi1)
 	$(MAKE) -C $(KERNEL_SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) KERNEL=kernel  bcmrpi_defconfig
 endif
