Get extensions from subdirectory ${TOOLCHAIN_REV}
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21328 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/initramfs/Makefile
+++ b/bootkernel/initramfs/Makefile
@@ -672,6 +672,7 @@ endif
 	sed -i 's/@@KERNELBRANCH@@/$(KERNEL_BRANCH)/g'		$@/etc/rc
 	sed -i 's/@@KERNELCOMMIT@@/$(shell cat $(KERNEL_COMMIT))/g' $@/etc/rc
 	sed -i 's/@@REVISION@@/$(REVISION)/g'			$@/etc/rc
+	sed -i 's/@@TCREV@@/$(TOOLCHAIN_REVISION)/g'		$@/etc/rc
 ifneq ($(findstring RaspberryPi, $(BOARDNAME)),)
 	sed -i '/mount -a/a if [ -f /sys/class/leds/led1/brightness ]; then echo 255 >/sys/class/leds/led1/brightness ; fi' $@/etc/rc
 	sed -i '/mount -a/G'					$@/etc/rc
