Only link aws-net-std.adb-8.3.0 if GCCVER really is 8.3.0.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21358 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/toolchain/libaws/Makefile
+++ b/toolchain/libaws/Makefile
@@ -52,7 +52,7 @@ default: package.deb
 libaws.a:
 	rm -rf obj
 	mkdir -p obj
-ifeq ($(BOARDNAME), RaspberryPi1)
+ifeq ($(GCCVER), 8.3.0)
 	cd src && ln -s aws-net-std.adb-8.3.0 aws-net-std.adb
 else
 	cd src && ln -s aws-net-std.adb-10.3.0 aws-net-std.adb
