Enable both PWM1 and PWM2
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21443 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/boot/OrangePiZero2W/overlays/MUNTS-0018.dts
+++ b/boot/OrangePiZero2W/overlays/MUNTS-0018.dts
@@ -17,6 +17,7 @@
 	};
 
 	// Enable PWM1 on GPIO267 aka Raspberry Pi GPIO12
+	// and    PWM2 on GPIO268 aka Raspberry Pi GPIO13
 
 	fragment@1 {
 		target = <&pwm>;
@@ -33,9 +34,17 @@
 		};
 	};	
 
+	fragment@3 {
+		target = <&pwm2>;
+		__overlay__ {
+			pinctrl-names = "default";
+			pinctrl-0 = <&pwm2_pi_pin>;
+		};
+	};	
+
 	// Enable MCP3204 on GPIO233 aka Raspberry Pi GPIO7
 
-	fragment@3 {
+	fragment@4 {
 		target = <&spi1>;
 		__overlay__ {
 			#address-cells = <1>;
