Added defconfig for Raspberry Pi 4.
git-svn-id: svn+ssh://subversion.munts.net/src/trunk/muntsos@21489 06ee2f96-5407-11de-8bab-f3d7589a4122

--- a/bootkernel/kernel/Makefile
+++ b/bootkernel/kernel/Makefile
@@ -68,6 +68,9 @@ endif
 ifeq ($(BOARDBASE), RaspberryPi3)
 	$(MAKE) -C $(KERNEL_SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) KERNEL=kernel8 bcm2711_defconfig
 endif
+ifeq ($(BOARDBASE), RaspberryPi4)
+	$(MAKE) -C $(KERNEL_SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) KERNEL=kernel8 bcm2711_defconfig
+endif
 	cp $(KERNEL_SRC)/.config $(KERNEL_CONFIG)
 	touch $(KERNEL_WORK)/config.done
 
