--- a/toolchain/crosstool/crosstool-ng/Makefile
+++ b/toolchain/crosstool/crosstool-ng/Makefile
@@ -1,6 +1,6 @@
 # Makefile for building crosstool-ng package for Debian
 
-# Copyright (C)2017-2022, Philip Munts, President, Munts AM Corp.
+# Copyright (C)2017-2023, Philip Munts dba Munts Technologies.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are met:
@@ -20,14 +20,14 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-CTNG_VERSION	?= 1.25.0
+CTNG_VERSION	?= 1.26.0
 CTNG_BRANCH	:= -b crosstool-ng-$(CTNG_VERSION)
 CTNG_URL	:= https://github.com/crosstool-ng/crosstool-ng.git
 CTNG_SRC	:= crosstool-ng.src
 
 OSNAME		?= unknown
 PKGNAME		:= crosstool-ng
-PKGVERSION	:= $(CTNG_VERSION)-$(shell date +%Y.%j)
+PKGVERSION	:= $(CTNG_VERSION)
 PKGARCH		:= $(shell dpkg --print-architecture)
 PKGDIR		:= $(PKGNAME)-$(PKGVERSION)-$(OSNAME)-$(PKGARCH)
 PKGFILE		:= $(PKGDIR).deb
