--- a/toolchain/libs/Makefile
+++ b/toolchain/libs/Makefile
@@ -174,8 +174,6 @@ SUBORDINATES	= ncurses libusb hidapi openssl zlib curl tirpc xmlrpc libpcap libm
 SRCDIRS		= $(NCURSES_SRC) $(LIBUSB_SRC) $(HIDAPI_SRC) $(OPENSSL_SRC) $(ZLIB_SRC) $(CURL_SRC) $(TIRPC_SRC) $(XMLRPC_C_SRC) $(LIBPCAP_SRC) $(LIBMNL_SRC) $(LIBNL_SRC) $(LIBSODIUM_SRC) $(LIBMYSQLCLIENT_SRC) $(GDBM_SRC) $(MQTT_SRC) $(RABBITMQ_SRC) $(ZEROMQ_SRC) $(MODBUS_SRC)
 DISTFILES	= $(NCURSES_DIST) $(LIBUSB_DIST) $(HIDAPI_DIST) $(OPENSSL_DIST) $(ZLIB_DIST) $(CURL_DIST) $(TIRPC_DIST) $(XMLRPC_C_DIST) $(LIBPCAP_DIST) $(LIBNL_DIST) $(LIBSODIUM_DIST) $(LIBMYSQLCLIENT_DIST) $(GDBM_DIST) $(MQTT_DIST) $(RABBITMQ_DIST) $(ZEROMQ_DIST) $(MODBUS_DIST)
 
-GAINROOT	?= fakeroot
-
 BUILDNUM	?= 1
 OSNAME		?= unknown
 PKGNAME		:= $(INSTALLDIR)-libs
@@ -184,6 +182,8 @@ PKGARCH		:= all
 PKGSUFFIX	:= $(PKGVER)-$(OSNAME)-$(PKGARCH)
 PKGDIR		:= $(PKGNAME)-$(PKGSUFFIX)
 PKGFILE		:= $(PKGDIR).deb
+
+include $(LIBSIMPLEIO)/include/dpkg.mk
 
 default: package.deb
 
@@ -694,7 +694,7 @@ copying: $(INSTALLDIR)/COPYING
 
 # Create Debian package
 
-package.deb: $(INSTALLDIR)/COPYING
+$(PKGDIR): $(INSTALLDIR)/COPYING
 	mkdir -p					$(PKGDIR)/DEBIAN
 	install -cm 0644 control			$(PKGDIR)/DEBIAN
 	sed -i s/@@NAME@@/$(PKGNAME)/g			$(PKGDIR)/DEBIAN/control
@@ -705,9 +705,9 @@ package.deb: $(INSTALLDIR)/COPYING
 	cp -R -P -p $(INSTALLDIR)/*			$(PKGDIR)$(FINALDIR)
 	rm -rf						$(PKGDIR)$(FINALDIR)/lib/cmake
 	rm -rf						$(PKGDIR)$(FINALDIR)/lib/pkgconfig
-	chmod -R ugo-w					$(PKGDIR)/usr/*
-	$(GAINROOT) dpkg-deb --build			$(PKGDIR)
-	chmod -R u+w					$(PKGDIR)/usr/*
+	touch $@
+
+package.deb: $(PKGFILE)
 
 ###############################################################################
 
